unpackaged/main/default/objects/Case_Handoff__c/fields/Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that will taking ownership of the hand-off</description>
    <inlineHelpText>User that will taking ownership of the hand-off</inlineHelpText>
    <label>Accepted By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>equals</operation>
            <value>CSR</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Handoffs1</relationshipName>
    <type>Lookup</type>
</CustomField>