unpackaged/main/default/objects/Case_Handoff__c/fields/From_Region__c.field-meta.xml
<CustomField>
    <fullName>From_Region__c</fullName>
    <inlineHelpText>The region the case is being handed off from. Must match the region of the person creating the handoff.</inlineHelpText>
    <label>From Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>GDL</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Scottsdale</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>