unpackaged/main/default/objects/Case_Handoff__c/fields/Handoff_Owner__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ultimate owner of the Case. This is a team member based on the same timezone than the customer that will be ultimately responsible to guarantee the resolution of the case.</description>
    <inlineHelpText>The ultimate owner of the Case. This is a team member based on the same timezone than the customer that will be ultimately responsible to guarantee the resolution of the case.</inlineHelpText>
    <label>Handoff Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.CS_Role__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Handoffs</relationshipName>
    <type>Lookup</type>
</CustomField>