unpackaged/main/default/objects/Case_Handoff__c/fields/X30min_Ownership_Reminder__c.field-meta.xml
<CustomField>
    <fullName>X30min_Ownership_Reminder__c</fullName>
    <formula>( Date_Time_Created__c  - 0.02083)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>30min Ownership Reminder</label>
    <type>DateTime</type>
</CustomField>